samples/_failures_safe/1761225209_c6dac9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35565abd.c: In function ‘main’:
./samples/SAFE/__tmp_35565abd.c:180:22: error: expected ‘]’ at end of input
  180 |         input[len - 1
      |                      ^
      |                      ]
./samples/SAFE/__tmp_35565abd.c:180:9: error: expected declaration or statement at end of input
  180 |         input[len - 1
      |         ^~~~~
./samples/SAFE/__tmp_35565abd.c:180:9: error: expected declaration or statement at end of input
